# cred

./: .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
migrations/2017-10-08-225016_create_credential/: up.sql
src/: cli.rs  main.rs  models.rs
src/cmd/: add.rs  list.rs
