[package]
name = "cred"
version = "0.1.0"
authors = ["Michael Herold <michael@michaeljherold.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/michaelherold/cred"

[dependencies]
clap = "2.26.2"
clippy = { version = "=0.0.162", optional = true }
diesel = { version = "0.16.0", features = ["sqlite"] }
diesel_codegen = { version = "0.16.0", features = ["sqlite"] }
dotenv = "0.9.0"

[features]
default = []
lint = ["clippy"]
